--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,7 +67,6 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="32dp"
         android:text="Login"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputUserPassword" />
@@ -106,16 +105,16 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:layout_toLeftOf="@id/tvText"
+            android:layout_marginStart="16dp"
+            android:layout_toStartOf="@id/tvText"
             android:background="#000000" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
-            android:layout_toRightOf="@id/tvText"
+            android:layout_marginEnd="16dp"
+            android:layout_toEndOf="@id/tvText"
             android:background="#000000" />
 
     </RelativeLayout>
@@ -130,5 +129,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutDivider" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
